...
    <string name="app_name">Nutrition Counter</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_address">Enter Address</string>
...
    <string name="date_of_birth">Date of Birth (YYYY-MM-DD)</string>
    <string name="phone">Phone</string>
    <string name="sex">Sex (M or F)</string>
    <string name="calculate_and_complete_profile">Calculate and Complete Profile</string>
    <string name="title_activity_main">Nutrition App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="slideshow">Slideshow</string>
    <string name="today_s_count">Today\'s Count</string>
    <string name="add_food_item">Add Food item</string>
    <string name="remaining">Remaining</string>
...
    <string name="max_cal">Max. Cal</string>
    <string name="consumed_cal1">Consumed. Cal</string>
    <string name="max_fiber1">Max. Fiber</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="ReportFrom">Report From : YYYY-MM-DD</string>
    <string name="ReportTo">Report To   : YYYY-MM-DD</string>
    <string name="get_results">Get Results</string>

</resources>
