<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"

            android:title="@string/profile" />
        <item
            android:id="@+id/todaycount"

            android:title="@string/today_s_count" />
        <item
            android:id="@+id/deleteUser"

            android:title="@string/delete_account" />
        <item
            android:id="@+id/generateReport"

            android:title="Report" />
    </group>


</menu>
