...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView3"
...
            android:text="@string/add_food_item"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="always"
            />
        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/searchView"
            />


...
